# Estrutura-de-Dados-Avancada

./: .gitignore  CMakeLists.txt  README.md
Aula 3/: aula3.cpp  aula3.h  cpp-version.cpp  exercicios-revisao analise de algoritmos.py
Aula 4/: a.txt  aula4.cpp  aula4.h
BinarySearchTree/: binarySearchTree.cpp  binarySearchTree.h  node.cpp  node.h
